Updated Open Street Map Tutorial (markdown)